[gd_scene load_steps=6 format=3 uid="uid://dhlvscoke51pf"]

[ext_resource type="Texture2D" uid="uid://cesb1gsuhx3xd" path="res://assets/arrows.png" id="1_1ry14"]
[ext_resource type="Script" uid="uid://bwbvgol0kj8vu" path="res://scripts/hit_line.gd" id="2_sh2a1"]

[sub_resource type="Animation" id="Animation_alvet"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlowOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1.3, 1.3, 1.3, 1)]
}

[sub_resource type="Animation" id="Animation_7gf8y"]
resource_name = "note_hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlowOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1.3, 1.3, 1.3, 1), Color(1.3, 1.3, 1.3, 1), Color(1.3, 1.3, 1.3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0rrdf"]
_data = {
&"RESET": SubResource("Animation_alvet"),
&"note_hit": SubResource("Animation_7gf8y")
}

[node name="HitLine" type="Sprite2D"]
texture = ExtResource("1_1ry14")
hframes = 4
vframes = 3
script = ExtResource("2_sh2a1")

[node name="RandomSpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="GlowOverlay" type="Sprite2D" parent="."]
modulate = Color(1.3, 1.3, 1.3, 1)
texture = ExtResource("1_1ry14")
hframes = 4
vframes = 3
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0rrdf")
}
autoplay = "note_hit"

[connection signal="timeout" from="RandomSpawnTimer" to="." method="_on_random_spawn_timer_timeout"]
